# gen-ai-software-engineering

homework-1/: .gitignore  HOWTORUN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
homework-1/demo/: quality.sh  run.sh  sample-data.json  sample-requests.http
homework-1/docs/: API_EXAMPLES.md  PR_DESCRIPTION.md
homework-1/src/: compliance.py  config.py  currencies.py  deps.py  errors.py  main.py  models.py  rate_limit.py  regions.py  services.py  store.py  validators.py
homework-1/src/models/: __init__.py  store.py  transaction.py  views.py
homework-1/src/routers/: accounts.py  transactions.py
homework-1/src/routes/: __init__.py  accounts.py  dependencies.py  transactions.py
homework-1/tests/: conftest.py  test_domain.py  test_features.py  test_filtering.py  test_input_validation.py  test_quality.py  test_scenarios.py  test_transactions.py  test_validation.py
homework-2/: .gitignore  ASSUMPTIONS.md  BUILD_PROMPT.md  README.md  SELF_VERIFICATION.md  TASKS.md  pyproject.toml  requirements-dev.txt  requirements.txt
homework-2/demo/: quality.sh  run.sh  sample-requests.http  test-api.sh
homework-2/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  TESTING_GUIDE.md  api-walkthrough.txt  coverage_report.txt
homework-2/samples/: invalid_tickets.csv  invalid_tickets.json  invalid_tickets.xml  sample_tickets.csv  sample_tickets.json  sample_tickets.xml
homework-2/src/: config.py  errors.py  main.py
homework-2/tests/: conftest.py  test_categorization.py  test_import_csv.py  test_import_json.py  test_import_xml.py  test_integration.py  test_performance.py  test_quality.py  test_ticket_api.py  test_ticket_model.py
homework-3/: README.md  (+2 more)
homework-4/: .gitignore  CLAUDE.md  HOWTORUN.md  PLAN.md  README.md  TEST_PLAN.md  pipeline.config.json  pyproject.toml  render-status.sh  run-pipeline.ps1  run-pipeline.sh  verify.sh
homework-4/agents/: bug-fixer.agent.md  bug-planner.agent.md  bug-researcher.agent.md  rca-analyst.agent.md  rca-verifier.agent.md  research-verifier.agent.md  security-verifier.agent.md  unit-test-generator.agent.md
homework-4/docs/: fixes-applied.html  fixes-diff.html  security-scan.html  unit-tests.html
homework-4/skills/: research-quality-measurement.md  unit-tests-FIRST.md
homework-4/tests/: test_baseline.py  test_cli.py  test_generated.py
homework-6/: .gitignore  CLAUDE.md  HOWTORUN.md  PLAN.md  README.md  TEST_PLAN.md  agents.md  integrator.py  pipeline.config.json  pyproject.toml  render-status.py  requirements-dev.txt  requirements.txt  research-notes.md  specification.md  verify.sh
homework-6/.claude/: settings.json
homework-6/agents/: __init__.py  common.py  compliance_checker.py  fraud_detector.py  reporting_agent.py  settlement_processor.py  transaction_validator.py
homework-6/agents-meta/: code-agent.agent.md  doc-agent.agent.md  spec-agent.agent.md  test-agent.agent.md
homework-6/mcp/: server.py
homework-6/scripts/: coverage_gate.sh  demo_hook.py  pre_push_hook.py
homework-6/tests/: conftest.py  test_common.py  test_compliance_checker.py  test_config.py  test_fraud_detector.py  test_integration.py  test_integrator_cli.py  test_mcp_server.py  test_reporting_agent.py  test_settlement_processor.py  test_transaction_validator.py
(+127 files in other folders)
