[project]
name = "customer-support-api"
version = "1.0.0"
description = "Homework 2 - Intelligent Customer Support System (FastAPI, in-memory)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends()/Query() in argument defaults is the idiomatic FastAPI pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
# The codebase is small; keep coverage high. CI fails below this threshold.
fail_under = 95
