[project]
name = "hw6-banking-pipeline"
version = "1.0.0"
description = "Multi-agent AI-powered banking transaction processing pipeline (Homework 6 capstone)"
authors = [{ name = "Anton Tsiatsko" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "radon>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
source = ["agents", "integrator", "mcp"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "shared"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["\\.venv", "shared", "tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "shared"]

[tool.radon]
exclude = ".venv/*,shared/*"
